--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
 		"tailwindcss": "^4.0.0",
+		"tailwindcss-motion": "^1.1.0",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.20.0",
 		"vite": "^6.2.5"
 	},
 	"dependencies": {
+		"bits-ui": "^1.3.19",
 		"ioredis": "^5.6.1"
 	}
 }
